...
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_toolbar"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/btn_fav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/transparent"
        android:src="@drawable/ic_baseline_favorite_24"
        android:visibility="gone"
        app:layout_constraintHorizontal_bias="1"
...
